fixed missing references in manual

--- a/manual/theory/rate.tex
+++ b/manual/theory/rate.tex
@@ -65,7 +65,7 @@ where $H_n(x)$ is a Hermite polynomial, $s_i=2\sqrt{\lambda_i^{nc}\lambda_i^{cn}
 \label{sec:rate_semiclassical}
 \index{charge transfer rate!semiclassical}
 
-One can also use the quantum-classical rate with a common set of vibrational coordinates~\cite{may_charge_2011}
+One can also use the quantum-classical rate with a common set of vibrational coordinates~\cite{may_relationship_2011}
 \begin{align}
  \omega_{ij} = \frac{2\pi}{\hbar}  \frac{|J_{ij}|^2}{\sqrt{4\pi \lambda_{ij}^\text{out} k_\text{B}T}}
  \sum_{N=0}^\infty \frac{1}{N!} \left( \frac{\lambda_{ij}^\text{int}}{\hbar\omega^\text{int}} \right)^{N}
