use local version of mdframed

--- a/manual/xtp-manual.tex
+++ b/manual/xtp-manual.tex
@@ -28,7 +28,7 @@
 
 
 \usepackage[tikz]{bclogo}
-\usepackage[framemethod=tikz]{mdframed}
+\usepackage[framemethod=tikz]{sty/mdframed}
 \usepackage{lipsum}
 
 
