hopefully make travis happy added latexmkrc file and added dependencies in texmf folder

--- a/manual/xtp-manual.tex
+++ b/manual/xtp-manual.tex
@@ -28,7 +28,7 @@
 
 
 \usepackage[tikz]{bclogo}
-\usepackage[framemethod=tikz]{sty/mdframed}
+\usepackage[framemethod=tikz]{mdframed}
 \usepackage{lipsum}
 
 
