--- a/votca.bib
+++ b/votca.bib
@@ -803,3 +803,12 @@ year = {2011}
 	year = {2014},
 	pages = {4104--4120},
 }
+
+@article{Rosenberger:2016,
+	title = {Comparison of iterative inverse coarse-graining methods},
+	journal = {European Physical Journal Special Topics},
+	author = {Rosenberger, David and Hanke, Martin and van der Vegt, Nico F. A.},
+	year = {2016},
+	pages = {accepted},
+        doi       = {10.1140/epjst/e2016-60120-1},
+}
