add cibi tutorials

--- a/README
+++ b/README
@@ -77,6 +77,9 @@ methanol-water/*/simplex      simplex optimizing
 urea-water/atomistic          atomistic reference simulations urea-water mixture
 urea-water/kb-ibi             Kirkwood-Buff coarse-graining (see Ganguly et al. 
                               J. Chem. Theo. Comp., 8, 1802 (2012) for details)
+urea-water/cibi               Coordination iterative Boltzmann inversion (see
+                              T. E. de Oliveira et al., JCP 144, 174106 (2016) 
+                              for details) 
 urea-water/ibi                boltzmann inversion
 
 each of the tutorials contains a run.sh which lists all commands
