added cibi section

--- a/usage/iterative_methods.tex
+++ b/usage/iterative_methods.tex
@@ -389,3 +389,5 @@ Often, runtime can be improved by smoothing the potential updates. Our experienc
   </post_update_options>
 \end{lstlisting}
 to the inverse section of an interaction in the settings \xml file.
+
+\input{usage/cibi}
