--- a/votca.bib
+++ b/votca.bib
@@ -812,3 +812,47 @@ year = {2011}
 	pages = {accepted},
         doi       = {10.1140/epjst/e2016-60120-1},
 }
+
+@article{deOliveira:2016,
+   author = "de Oliveira, Tiago E. and Netz, Paulo A. and Kremer, Kurt and Junghans, Christoph and Mukherji, Debashish",
+   title = "C–IBI: Targeting cumulative coordination within an iterative protocol to derive coarse-grained models of (multi-component) complex fluids",
+   journal = "The Journal of Chemical Physics",
+   year = "2016",
+   volume = "144",
+   number = "17",
+   eid = 174106,
+   pages = "",
+   url = "http://scitation.aip.org/content/aip/journal/jcp/144/17/10.1063/1.4947253",
+   doi = "http://dx.doi.org/10.1063/1.4947253"
+}
+
+@article{Kirkwood:1951,
+   author = "Kirkwood, John G. and Buff, Frank P.",
+   title = "The Statistical Mechanical Theory of Solutions. I",
+   journal = "The Journal of Chemical Physics",
+   year = "1951",
+   volume = "19",
+   number = "6",
+   pages = "774-777",
+   url = "http://scitation.aip.org/content/aip/journal/jcp/19/6/10.1063/1.1748352",
+   doi = "http://dx.doi.org/10.1063/1.1748352"
+}
+
+@article{Mukherji:2013,
+   author = "Mukherji, D. and Kremer, K.",
+   title = "Coil–Globule–Coil Transition of PNIPAm in Aqueous Methanol:
+   Coupling All-Atom Simulations to Semi-Grand Canonical Coarse-Grained Reservoir ",
+   journal = "Macromolecules",
+   year = "2013",
+   volume = "46",
+   number = "22",
+   pages = "9158-9163",
+}
+
+@book{Naim:2006,
+	author = {A. Ben-Naim},
+	title = {Molecular Theory of Solutions},
+	year = {2006},
+	publisher = {Oxford University Press},
+        address = {New York},
+}
