updated reference for regularization of IMC

--- a/votca.bib
+++ b/votca.bib
@@ -806,11 +806,12 @@ year = {2011}
 
 @article{Rosenberger:2016,
 	title = {Comparison of iterative inverse coarse-graining methods},
+ 	volume={225},
 	journal = {European Physical Journal Special Topics},
 	author = {Rosenberger, David and Hanke, Martin and van der Vegt, Nico F. A.},
 	year = {2016},
-	pages = {accepted},
-        doi       = {10.1140/epjst/e2016-60120-1},
+	pages = {1323-1345},
+	doi = "http://dx.doi.org/10.1140/epjst/e2016-60120-1"
 }
 
 @article{deOliveira:2016,
