additional support for full BSE solutions and excitation analysis

--- a/manual/xtp-manual.tex
+++ b/manual/xtp-manual.tex
@@ -153,39 +153,41 @@ pdfpagemode=UseNone]{hyperref}
 
 \linenumbers
 
-\input{theory/introduction}
+\input{remark}
 
-\chapter{Theoretical background}
-\label{sec:theory}
+%\input{theory/introduction}
 
-\input{theory/workflow}	
-\input{theory/morphology}
-\input{theory/fragments}
-\input{theory/neighborlist}
-\input{theory/reorganization_energy}
-\input{theory/energetic_disorder}
-\input{theory/gdma}
-\input{theory/thole}
-\input{theory/electronic_couplings}
-\input{theory/rate}
-\input{theory/kmc}
-\input{theory/nondispersive}
-\input{theory/stochastic}
-\input{theory/analysis}
-\input{theory/correlations}
+%\chapter{Theoretical background}
+%\label{sec:theory}
+
+%\input{theory/workflow}	
+%\input{theory/morphology}
+%\input{theory/fragments}
+%\input{theory/neighborlist}
+%\input{theory/reorganization_energy}
+%\input{theory/energetic_disorder}
+%\input{theory/gdma}
+%\input{theory/thole}
+%\input{theory/electronic_couplings}
+%\input{theory/rate}
+%\input{theory/kmc}
+%\input{theory/nondispersive}
+%\input{theory/stochastic}
+%\input{theory/analysis}
+%\input{theory/correlations}
 %\input{theory/idft}
 
 \chapter{Input and output files}
 \label{sec:io}
-\input{input/topology_atomistic}
-\input{input/topology_coarsegrained}
+%\input{input/topology_atomistic}
+%\input{input/topology_coarsegrained}
 
 %\input{input/topology_conjseg}
-\input{input/orbitals_zindo}
-\input{input/header_edft}
-\input{input/header_idft}
+%\input{input/orbitals_zindo}
+%\input{input/header_edft}
+%\input{input/header_idft}
 \input{input/output_dft}
-\input{input/statefile}
+%\input{input/statefile}
 
 \input{reference/reference}
 
