--- a/README
+++ b/README
@@ -27,18 +27,19 @@ The following tutorials (compare with paper above) are included. They all rely
 on Gromacs unless specified otherwise:
 
 spce/atomistic                atomistic reference simulations for SPC/E water
-spce/ibi                      boltzmann inversion for SPC/E water
-spce/ibi_pressure             boltzmann inversion for SPC/E water with pressure correction
-spce/ibi_hoomd-blue           boltzmann inversion for SPC/E water using hoomd-blue
-spce/ibi_dlpoly               boltzmann inversion for SPC/E water using dl_poly
-spce/ibi_espresso             boltzmann inversion for SPC/E water using ESPResSo
-spce/ibi_espressopp           boltzmann inversion for SPC/E water using ESPResSo++
-spce/ibi_lammps               boltzmann inversion for SPC/E water using LAMMPS
+spce/force_matching           force matching for SPC/E water
+spce/ibi                      iterative boltzmann inversion for SPC/E water
+spce/ibi_pressure             iterative boltzmann inversion for SPC/E water with pressure correction
+spce/ibi_hoomd-blue           iterative boltzmann inversion for SPC/E water using hoomd-blue
+spce/ibi_dlpoly               iterative boltzmann inversion for SPC/E water using dl_poly
+spce/ibi_espresso             iterative boltzmann inversion for SPC/E water using ESPResSo
+spce/ibi_espressopp           iterative boltzmann inversion for SPC/E water using ESPResSo++
+spce/ibi_lammps               iterative boltzmann inversion for SPC/E water using LAMMPS
 spce/imc                      inverse monte carlo for SPC/E water
 spce/re                       relative entropy method for SPC/E water
 spce/re_lammps                relative entropy method for SPC/E water using LAMMPS
-spce/realtime                 boltzmann inversion realtime tutorial for SPC/E water
-spce/tf                       thermodynamic force example for SPC/E water
+spce/realtime                 iterative boltzmann inversion realtime tutorial for SPC/E water
+spce/realtime_lammpts         iterative boltzmann inversion realtime tutorial for SPC/E water using LAMMPS
 spce/simplex                  simplex optimization for SPC/E water
 spce/simplex/simple            optimizing the rdf
 spce/simplex/pressure          optimizing the rdf and pressure
@@ -48,12 +49,12 @@ spce/cma/simple                optimizing the rdf
 spce/cma/density               optimizing the rdf and the density
 
 methanol/atomistic            atomistic simulations for methanol
-methanol/ibi                  boltzmann inversion for methanol
-methanol/ibi_espresso         boltzmann inversion for methanol using ESPResSo
+methanol/force_matching       force matching for methanol
+methanol/ibi                  iterative boltzmann inversion for methanol
 methanol/imc                  inverse monte carlo for methanol
 
 propane/atomistic             atomistic simulations for liquid propane
-propane/ibi                   iterative inverse boltzmann for nonbonded
+propane/ibi                   iterative boltzmann inversion for nonbonded
                               interactions of liquid propane
 propane/imc                   inverse monte carlo for nonbonded
                               interactions of liquid propane
@@ -61,12 +62,13 @@ propane/single_chain          atomistic simulations, boltzmann inversion
                               and force matching for a single chain of propane
 
 hexane/atomistic              atomistic simulations for liquid hexane
-hexane/ibi                    iterative inverse boltzmann for nonbonded
+hexane/force_matching         force matching (bonded and nonbonded interactions of liquid hexane
+hexane/ibi_all                iterative boltzmann inversion for bonded and nonbonded
                               interactions of liquid hexane
-hexane/ibi_bonded             iterative inverse boltzmann for bonded & 
-                              nonbonded interactions of liquid hexane
-hexane/hybrid_force_matching  hybrid force matching (with bonded interaction
-                              from boltzmann inversion
+hexane/ibi_nonbonded          iterative boltzmann inversion for only nonbonded
+                              interactions of liquid hexane
+hexane/hybrid_force_matching  hybrid force matching of only nonbonded interactions
+                              (with bonded interactions from boltzmann inversion)
 
 methanol-water                methanol-water mixture for 3 different concentrations
 methanol-water/*/atomistic    atomistic simulations
