--- a/README
+++ b/README
@@ -39,7 +39,7 @@ spce/imc                      inverse monte carlo for SPC/E water
 spce/re                       relative entropy method for SPC/E water
 spce/re_lammps                relative entropy method for SPC/E water using LAMMPS
 spce/realtime                 iterative boltzmann inversion realtime tutorial for SPC/E water
-spce/realtime_lammpts         iterative boltzmann inversion realtime tutorial for SPC/E water using LAMMPS
+spce/realtime_lammps         iterative boltzmann inversion realtime tutorial for SPC/E water using LAMMPS
 spce/simplex                  simplex optimization for SPC/E water
 spce/simplex/simple            optimizing the rdf
 spce/simplex/pressure          optimizing the rdf and pressure
