first try build manual with cmake

--- a/inputfiles.tex
+++ b/inputfiles.tex
@@ -7,7 +7,7 @@
 Mapping relates atomistic and coarse-grained representations of the system. It is organized as follows: for each molecule {\em type} a mapping file is created. When used as a command option, these files are combined in a list separated by a semicolon, e.~g. \progopt{---cg}~\texttt{"protein.xml;solvent.xml"}.
 
 \begin{wrapfigure}{ht}{6cm}
-  \includegraphics[width=6cm]{usage/fig/propane.eps}
+  \includegraphics[width=6cm]{usage/fig/propane}
   \caption{Atom labeling and mapping from an all-atom to a united atom representation of a propane molecule.
   \label{fig:propane_map}
 }
