--- a/manual.tex
+++ b/manual.tex
@@ -17,8 +17,8 @@
 \usepackage{paralist}
 
 \usepackage
-[dvips, %or dvips or pdftex
-pagebackref, %or backref
+%[dvips, %or dvips or pdftex
+[pagebackref, %or backref
 colorlinks=true,
 linkcolor=webgreen, %defined below
 filecolor=webbrown, %defined below
