--- a/newcommands.tex
+++ b/newcommands.tex
@@ -41,7 +41,8 @@
 \newcommand{\votcaweb}{\htmladdnormallink{{\sc \color{blue} www.votca.org}\xspace}{http://www.votca.org}}
 
 \input{gitid}
-\input{reference/csgid}
+%\input{reference/csgid}
+\newcommand{\csgid}{bla}
 
 % todo
 \newcommand{\todo}{{\marginpar{\sc \color{red} TODO}}\xspace}
