--- a/theory.tex
+++ b/theory.tex
@@ -120,7 +120,7 @@ This can be done by employing exclusion lists using \prog{csg_boltzmann} with th
 \label{sec:theory_iterative_methods}
 
 \begin{wrapfigure}{ht}{3cm}  
-\includegraphics[width=3cm]{functionality/fig/iterativemethods.eps}
+%\includegraphics[width=3cm]{functionality/fig/iterativemethods.eps}
   \caption{
     \label{fig:iterative_methods}
     Block-scheme of an iterative method.
