--- a/usage/forcematching.tex
+++ b/usage/forcematching.tex
@@ -1,7 +1,7 @@
 \chapter{Force matching}
 \begin{figure}
    \centering
-   \includegraphics[width=0.5\textwidth]{usage/fig/flow_fmatch.eps}
+   %\includegraphics[width=0.5\textwidth]{usage/fig/flow_fmatch.eps}
    \caption{Flowchart to perform force matching.}
 \end{figure}
 The force matching algorithm with cubic spline basis is implemented in the \prog{csg_fmatch} utility. A list of available options can be found in the reference section of \prog{csg_fmatch} (command \texttt{--h}).
