--- a/usage/iterative_methods.tex
+++ b/usage/iterative_methods.tex
@@ -12,7 +12,7 @@ follows in the next chapters, in particular on the \ibi, \imc, and \re methods.
 
 \begin{figure}[h]
    \centering
-   \includegraphics[width=7cm]{usage/fig/flow_ibi.eps}
+   %\includegraphics[width=7cm]{usage/fig/flow_ibi.eps}
    \caption{\label{fig:flow_ibi}Flowchart to perform iterative Boltzmann inversion.}
 \end{figure}
 
@@ -21,7 +21,7 @@ follows in the next chapters, in particular on the \ibi, \imc, and \re methods.
 
 \begin{figure}[t]
    \centering
-   \includegraphics[width=7cm]{functionality/fig/flowchart.eps}
+   %\includegraphics[width=7cm]{functionality/fig/flowchart.eps}
    \caption{\label{fig:flowchart}Block-scheme of the workflow control for the iterative methods. The most time-consuming parts are marked in red.}
 \end{figure}
 
