cmake: bring back tex2eps pics

--- a/usage/boltzmann.tex
+++ b/usage/boltzmann.tex
@@ -4,7 +4,7 @@
 %
 \begin{wrapfigure}{t}{7cm}
    \centering
-   %\includegraphics[width=7cm]{usage/fig/flow_boltzmann.eps}
+   \includegraphics[width=7cm]{usage/fig/flow_boltzmann.eps}
    \caption{Flowchart demonstrating useful options of the tool.}
 \end{wrapfigure}
 %
