--- a/newcommands.tex
+++ b/newcommands.tex
@@ -41,8 +41,7 @@
 \newcommand{\votcaweb}{\htmladdnormallink{{\sc \color{blue} www.votca.org}\xspace}{http://www.votca.org}}
 
 \input{gitid}
-%\input{reference/csgid}
-\newcommand{\csgid}{bla}
+\input{reference/csgid}
 
 % todo
 \newcommand{\todo}{{\marginpar{\sc \color{red} TODO}}\xspace}
