--- a/reference.tex
+++ b/reference.tex
@@ -6,18 +6,18 @@
 \label{sec:ref_mapping}
 The root node always has to be cg\_molecule. It can contain the following keywords:
 
-%\input{reference/xml/mapping.xml}
+\input{reference/xml/mapping.xml}
 
 \section{Topology file}
 \label{sec:ref_topology}
 The \xml topology file
 
-%\input{reference/xml/topol.xml}
+\input{reference/xml/topol.xml}
 
 \section{Settings file}
 All options for the iterative script are stored in an xml file.
 \label{sec:ref_options}
-%\input{reference/xml/csg_defaults.xml}
+\input{reference/xml/csg_defaults.xml}
 \vfill
 
 \section{Scripts}
