cmake: bring back csg_table.tex

--- a/reference.tex
+++ b/reference.tex
@@ -1,7 +1,7 @@
 \chapter{Reference}
 \section{Programs}
 \label{sec:ref_programs}
-%\input{reference/programs/all}
+\input{reference/programs/all}
 \section{Mapping file}
 \label{sec:ref_mapping}
 The root node always has to be cg\_molecule. It can contain the following keywords:
@@ -24,6 +24,6 @@ All options for the iterative script are stored in an xml file.
 \label{sec:csg_table}
 Scripts are used by \prog{csg_call} and \prog{csg_inverse}.
 The script table commonly used (compare \texttt{csg\_call --list}): 
-%\input{reference/scripts/csg_table}
+\input{reference/scripts/csg_table}
 Script calls can be overwritten by adding a line with the 3rd column changed to \texttt{csg\_table} in \cgopt{inverse.scriptpath} directory.
 %\input{reference/scripts/all}
