--- a/reference.tex
+++ b/reference.tex
@@ -26,4 +26,4 @@ Scripts are used by \prog{csg_call} and \prog{csg_inverse}.
 The script table commonly used (compare \texttt{csg\_call --list}): 
 \input{reference/scripts/csg_table}
 Script calls can be overwritten by adding a line with the 3rd column changed to \texttt{csg\_table} in \cgopt{inverse.scriptpath} directory.
-%\input{reference/scripts/all}
+\input{reference/scripts/all}
