cmake: started on manual build

--- a/manual/reference/reference.tex
+++ b/manual/reference/reference.tex
@@ -5,7 +5,7 @@
 \label{sec:programs}
 Programs execute specific tasks (calculators). 
 
-\input{reference/programs/all}
+%\input{reference/programs/all}
 
 \section{Calculators}
 \label{ref:calculators}
@@ -31,7 +31,7 @@ A detailed description of all options of a specific calculator(s) is available v
 \vskip 0.1cm
 {\noindent \small \xtprun \texttt{-{}-desc calc1,calc2,...} }
 
-\input{reference/calculators/calculators}
+%\input{reference/calculators/calculators}
 \vfill
 
 \section{Common options}
@@ -39,6 +39,6 @@ A detailed description of all options of a specific calculator(s) is available v
 %\setdefaultleftmargin{0.8em}{0.8em}{0.8em}{0.8em}{0.8em}{0.8em}
 \rowcolors{1}{invisiblegray}{white}
 {\small 
-\input{reference/xml/options.xml}
+%\input{reference/xml/options.xml}
 }
 \vfill
