cmake: manual builds without reference

--- a/manual/xtp-manual.tex
+++ b/manual/xtp-manual.tex
@@ -195,6 +195,6 @@ pdfpagemode=UseNone]{hyperref}
 \nolinenumbers
 
 \bibliographystyle{short}
-{\footnotesize \bibliography{literature_short} }
+{\footnotesize \bibliography{xtp-manual} }
 
 \end{document} 
