cmake: reference/xml back

--- a/manual/input/topology_coarsegrained.tex
+++ b/manual/input/topology_coarsegrained.tex
@@ -9,7 +9,7 @@ The file \xmlcsg contains the whole electrostatic information about the molecule
 \begin{table}[h]
 \label{tab:map}
 \caption{Description of the \xml mapping file (\xmlcsg).}
-\rowcolors{1}{invisiblegray}{white}% {\footnotesize \input{reference/xml/map.xml}}
+\rowcolors{1}{invisiblegray}{white} {\footnotesize \input{reference/xml/map.xml}}
 \end{table}
 %
 % Define new language for listings.
