--- a/manual/reference/reference.tex
+++ b/manual/reference/reference.tex
@@ -39,6 +39,6 @@ A detailed description of all options of a specific calculator(s) is available v
 %\setdefaultleftmargin{0.8em}{0.8em}{0.8em}{0.8em}{0.8em}{0.8em}
 \rowcolors{1}{invisiblegray}{white}
 {\small 
-%\input{reference/xml/options.xml}
+\input{reference/xml/options.xml}
 }
 \vfill
