cmake: reference/programs back

--- a/manual/reference/reference.tex
+++ b/manual/reference/reference.tex
@@ -5,7 +5,7 @@
 \label{sec:programs}
 Programs execute specific tasks (calculators). 
 
-%\input{reference/programs/all}
+\input{reference/programs/all}
 
 \section{Calculators}
 \label{ref:calculators}
