cmake: bring back ref for calculators

--- a/manual/reference/reference.tex
+++ b/manual/reference/reference.tex
@@ -31,7 +31,7 @@ A detailed description of all options of a specific calculator(s) is available v
 \vskip 0.1cm
 {\noindent \small \xtprun \texttt{-{}-desc calc1,calc2,...} }
 
-%\input{reference/calculators/calculators}
+\input{reference/calculators/calculators}
 \vfill
 
 \section{Common options}
