added a RandomFacts page to manual

--- a/manual/xtp-manual.tex
+++ b/manual/xtp-manual.tex
@@ -174,7 +174,7 @@ pdfpagemode=UseNone]{hyperref}
 \input{theory/analysis}
 \input{theory/correlations}
 %\input{theory/idft}
-
+\input{RandomFacts}
 \chapter{Input and output files}
 \label{sec:io}
 \input{input/topology_atomistic}
@@ -188,6 +188,8 @@ pdfpagemode=UseNone]{hyperref}
 \input{input/statefile}
 
 \input{reference/reference}
+
+
 
 %\appendix
 %\input{appendix/xtp_standalone}
