added to random facts

--- a/manual/RandomFacts.tex
+++ b/manual/RandomFacts.tex
@@ -8,6 +8,8 @@ This section is a collection of facts we discovered about xtp and ctp which shou
 
 The cutoffs used should not exceed the dimension of the cell, at least for a non orthogonal unit cell. XQMM throws an error if your cutoff is larger than the box, but it does not take the extension of the molecule into accout, so often you may still have overlap.
 
+XQMMM takes the segment coordinates from the MPS_Files so be vary careful which MPS_File you put in.
+
 
 \subsection{EWALD}
 
