--- a/README
+++ b/README
@@ -36,6 +36,7 @@ spce/ibi_dlpoly               iterative boltzmann inversion for SPC/E water usin
 spce/ibi_espresso             iterative boltzmann inversion for SPC/E water using ESPResSo
 spce/ibi_espressopp           iterative boltzmann inversion for SPC/E water using ESPResSo++
 spce/ibi_lammps               iterative boltzmann inversion for SPC/E water using LAMMPS
+spce/ibi_gromacs-multi        iterative boltzmann inversion for SPC/E water using GROMACS' multi feature
 spce/imc                      inverse monte carlo for SPC/E water
 spce/re                       relative entropy method for SPC/E water
 spce/re_lammps                relative entropy method for SPC/E water using LAMMPS
