Switched mainpage to page so as not to conflict with current mainpage use in csg version.h

--- a/DEVELOPERS_README.dox
+++ b/DEVELOPERS_README.dox
@@ -1,5 +1,5 @@
 
-/*! \mainpage VOTCA Developers Guide
+/*! \page VOTCA Developers Guide
  *
  * The page is designed to give new developers general guidelines for
  * implementing code consistent with the VOTCA and c++ style and standard.
