--- a/usage/iterative_methods.tex
+++ b/usage/iterative_methods.tex
@@ -106,7 +106,7 @@ If the iteration was interrupted, the script \prog{csg_inverse} might not be abl
 \subsection{Input preparation}
 This section describes the usage of \ibi, implemented within the scripting framework described in the previous section \ref{sec:iterative_workflow}. It is suggested to get a basic understanding of this framework before proceeding.
 
-\ibi so far only supports iterative refinement of non-bonded interactions. An outline of the workflow for performing \ibi is given in \fig{fig:flow_ibi}.
+An outline of the workflow for performing \ibi is given in \fig{fig:flow_ibi}.
 
 To specify Iterative Boltzmann Inversion as algorithm in the script, add \texttt{ibi} in the \texttt{method} section of the \xml setting file as shown below.
 
